font changes, for now

--- a/app/assets/javascripts/backbone/templates/activities/activityCustom.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activityCustom.jst.ejs
@@ -40,7 +40,8 @@
   .activityCustom section p {
   	overflow: scroll;
   	height: 68%;
-  	font-family: 'Open Sans Condensed', sans-serif;
+  	font-family: 'Lato', sans-serif;
+    font-weight: 300;
   	font-size: 100%;
   	margin: 10px;
     padding: 10px;
