--- a/app/assets/stylesheets/history.scss
+++ b/app/assets/stylesheets/history.scss
@@ -72,8 +72,9 @@ $greenText: rgb(104, 187, 108);
           }
 
           tbody tr td {
-            font-family: 'Open Sans Condensed', sans-serif;
+            font-family: 'Lato', sans-serif;
             font-size: 18px;
+            font-weight: 300;
           }
 
           tbody tr td a:hover {
