--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -111,7 +111,8 @@
 }
 
 .settingsModule section p {
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
     float: left;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -230,7 +231,8 @@ a:hover {
 }
 
 .settingInterests td {
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
 	font-size: 20px;
 }
 
