--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -54,7 +54,8 @@
   	overflow: scroll;
   	height: 100%;
     width: 100%;
-  	font-family: 'Open Sans Condensed', sans-serif;
+  	font-family: 'Lato', sans-serif;
+    font-weight: 300;
   	font-size: 100%;
   	margin: 10px;
     padding: 10px;
