--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -69,7 +69,8 @@ $greenText: rgb(104, 187, 108);
           }
 
           tbody tr td {
-            font-family: 'Open Sans Condensed', sans-serif;
+            font-family: 'Lato', sans-serif;
+            font-weight: 300;
             font-size: 16px;
           }
 
