--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,8 @@ $containerHeaderColor: rgb(31, 137, 229);
     background-color: #edf0f2;
     padding: 0px;
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
     /*font-family: "Avenir", "Lato", Arial, Helvetica, sans-serif;*/
     font-size: 120%;
   }
@@ -80,14 +81,15 @@ $containerHeaderColor: rgb(31, 137, 229);
   }
 
   .menuSelection a li{
-    padding: 25px 10px 10px 30px;
+    padding: 25px 10px 20px 30px;
   }
 
   .menuSelection a  li {
-    font-size: 25px;
+    font-size: 20px;
     text-decoration: none;
     color: $sidebarFontColor;
-    font-family: 'Open Sans Condensed';
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
   }
 
   .menuSelection li:hover {
