--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -1,6 +1,7 @@
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-
+<link href='https://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700&subset=latin,latin-ext'>
 <div class="sidebar">
   <div class="top-bar">
     <img id="logo" src="/tempologo.png" />
