--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -16,7 +16,7 @@
     position: relative;
     top: 45px;
     margin: 0 auto;
-    width: 650px;
+    width: 90%;
     min-height: 500px;
     max-height: 600px;
     background-color: white;
@@ -66,6 +66,8 @@
     max-height: 365px;
     overflow: scroll;
     position: relative;
+    border: none;
+    font-size: 18px;
   }
 
   .activity section .likeContainer {
@@ -96,7 +98,7 @@
 
   #like-count {
     color: rgb(92, 184, 92);
-
+    margin-right: 45px;
   }
 
   #dislike-count {
@@ -106,8 +108,6 @@
   .like-btn {
     background-color: rgb(92, 184, 92);
     border-color: rgb(92, 184, 92);    
-
-
   }
 
   .dislike-btn {
@@ -153,8 +153,8 @@
   </section>
 
   <footer>
-      <span id="likes">Likes: <span id="like-count"><%= likes %></span></span>
-      <span id="dislikes">Disikes: <span id="dislike-count"><%= dislikes %></span></span>
+      <span id="likes"><span id="like-count"><%= likes %></span></span>
+      <span id="dislikes"><span id="dislike-count"><%= dislikes %></span></span>
       <br>
       <button class='btn btn-primary like-btn' role="button">Like</button>
       <button class='btn btn-primary dislike-btn' role="button">Dislike</button><br>  
