fixed link highlighting problem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -327,6 +327,7 @@ $containerHeaderColor: rgb(31, 137, 229);
 
 a, a:hover, a:active, a:visited {
     text-decoration:none;
+    color: $sidebarFontColor;
 }
 
 /*THE MAIN WRAPPER*/
