--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -18,7 +18,7 @@
     margin: 0 auto;
     width: 90%;
     min-height: 500px;
-    max-height: 600px;
+    max-height: 800px;
     background-color: white;
     border: 1px solid #ddd;
     box-shadow: 1px 1px 1px #eee;
@@ -69,6 +69,10 @@
     position: relative;
     border: none;
     font-size: 18px;
+  }
+
+  .activity section .content-video {
+    text-align: center;
   }
 
   .activity section .likeContainer {
