--- a/app/assets/stylesheets/history.scss
+++ b/app/assets/stylesheets/history.scss
@@ -9,6 +9,8 @@ $dangerRed: #891515;
 $greenBorder: #d6e9c6;
 $greenBackground: #3c763d;
 $greenText: rgb(104, 187, 108);
+$sidebarFontColor: #28b5f6;
+
 
 .histContainer {
     width: 44%;
@@ -19,8 +21,6 @@ $greenText: rgb(104, 187, 108);
     border: 1px solid #f5f5f5;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px; 
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;  
     float: left;
     margin-left: 4%;
     margin-bottom: 20px;
@@ -32,7 +32,6 @@ $greenText: rgb(104, 187, 108);
       border-top-right-radius: 5px;
       border-top-left-radius: 5px;
       border-top: 4px solid $greenBackground;
-      border-bottom: 1px solid $greenBorder;
       background-color: #f3f5f6;
       background-color: white;
 
@@ -114,7 +113,6 @@ $greenText: rgb(104, 187, 108);
       border-top-right-radius: 5px;
       border-top-left-radius: 5px;
       border-top: 4px solid $greenBackground;
-      border-bottom: 1px solid $greenBorder;
       background-color: #f3f5f6;
       background-color: white;
 
@@ -154,7 +152,8 @@ $greenText: rgb(104, 187, 108);
           }
 
           tbody tr td {
-            font-family: 'Open Sans Condensed', sans-serif;
+            font-family: 'Lato', sans-serif;
+            font-width: 300;
             font-size: 18px;
           }
 
@@ -172,4 +171,10 @@ $greenText: rgb(104, 187, 108);
         }
       }
     }
+}
+
+.share-button {
+      float: right;
+      color: white;
+      background-color: $sidebarFontColor;
 }
