--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -83,7 +83,7 @@
   .activity footer {
   	background-color: #f5f5f5;
   	position: absolute;
-  	height: 15%;
+  	height: 20%;
   	bottom: 0;
   	border: 1px solid #ddd;
   }
@@ -130,14 +130,28 @@
   }
 
   .linkContainer {
-    float: left;
     margin-top: -35px;
     padding-left: 10px;
+    padding-right: 10px; 
   }
 
   a:hover {
   	background-color: transparent;
     font-size: 100%;
+  }
+
+  #share {
+    float: right;
+    cursor: pointer;
+  }
+
+  #back {
+    float: left;
+  }
+
+  #link {
+    position: relative;
+    top: 40px;
   }
 </style>
 
@@ -163,9 +177,10 @@
       <button class='btn btn-primary like-btn' role="button">Like</button>
       <button class='btn btn-primary dislike-btn' role="button">Dislike</button><br>  
       <div class="linkContainer">
-        <a href='<%= backLink %>' id='back'> Back </a>     
+        <a id="back" href='<%= backLink %>' id='back'> Back </a>   
+        <a id="share"> Share </a>
+  
       </div>
       <div class="content-link"><a id="link" href='<%= link %>' target="_blank"> Link </a></div>
-
   </footer>
 </div>
