--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -323,6 +323,7 @@ $containerHeaderColor: rgb(31, 137, 229);
 	  }
 
 	  .interest-wrapper {
+	  	height: 250px;
 	  	width: 300px;
 	  	overflow: scroll;
 	  }
