changed login and signup colors

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,8 +4,8 @@
 */ /*Login */
 
 $signupFontColor: #c07130;
-$lightBlue: #7FA2C1;
-$darkBlue: #436786;
+$lightBlue: #2286ED;
+$darkBlue: #2286ED;
 $orangeBorder: #f06c00;
 $orangeButton: #e65000;
 
