fixed like/dislike button behavior and centered footer

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -112,12 +112,22 @@
 
   .like-btn {
     background-color: rgb(92, 184, 92);
-    border-color: rgb(92, 184, 92);    
+    border-color: rgb(92, 184, 92);  
+  }
+
+  .like-btn:hover, .like-btn:active, .like-btn:visited, .like-btn:focus {
+    background-color: #198A00;
+    outline: none;
   }
 
   .dislike-btn {
     background-color: rgb(217, 83, 79);
     border-color: rgb(217, 83, 79);
+  }
+
+    .dislike-btn:hover, .dislike-btn:active, .dislike-btn:visited, .dislike-btn:focus {
+    background-color: #9D251B;
+    outline: none;
   }
 
   .likeContainer {
@@ -128,6 +138,7 @@
   	opacity: .8;
   	cursor: pointer;
   }
+
 
   .linkContainer {
     margin-top: -35px;
