--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,6 +137,7 @@ $containerHeaderColor: rgb(31, 137, 229);
   footer h3 {
     margin: 0;
     margin-top: 20px;
+    margin-left: 200px;
     font-weight: normal;
   }
 
@@ -333,6 +334,10 @@ $containerHeaderColor: rgb(31, 137, 229);
 a, a:hover, a:active, a:visited {
     text-decoration:none;
     color: $sidebarFontColor;
+}
+
+.btn-primary:focus, .btn-primary:active {
+	outline: none;
 }
 
 /*THE MAIN WRAPPER*/
