fixed button clicks and enter button logs/signs you in

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,8 +50,8 @@ $containerHeaderColor: rgb(31, 137, 229);
 	background-color: $sidebarMain;
   }
 
-   button, button:focus {
-    outline: none;
+   button, button:focus, button:active, button:visited {
+    outline: none !important;
   }
 
   .top-bar {
