added time wheel for custom activities

--- a/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
@@ -15,7 +15,9 @@
 		<label for="content"> Content: </label> <br> 
 		<input type="text" name"content" id="content" value=""> <br> 
 		<label for="completion_time"> Completion time: </label> <br> 
-		<input type="text" name"completion_time" id="completion_time" value=""> 
+		<section> 
+			<input class="knob" data-width="100" data-displayinput="true" value="0" height="100" >
+		</section>		
 		<p id="warning"> </p> 
 		<br>
 		<button type="button" class="submitCustomActivity btn btn-primary"> Submit </button> 
