--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,6 +86,8 @@ $containerHeaderColor: rgb(31, 137, 229);
 
   .menuSelection a li{
     padding: 25px 10px 20px 30px;
+    border-left: 3px solid $sidebarMain;
+
   }
 
   .menuSelection a  li {
@@ -104,7 +106,7 @@ $containerHeaderColor: rgb(31, 137, 229);
 
   }
 
-  a:hover, a:visited {
+  a:hover, a:visited, a:active, a:focus {
   	text-decoration: none;
   }
 
@@ -120,7 +122,7 @@ $containerHeaderColor: rgb(31, 137, 229);
   }
 
   .selected {
-  	border-left: 3px solid #1f89e5;
+  	border-left: 3px solid #2286ED !important;
   }
 
   footer {
