fix create customactivity overflow bug

--- a/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
@@ -4,6 +4,7 @@
 <style>
 
 </style>
+<div class="jumbotron activity">
 
 <form id="custom-activities-form" name="custom-activity"> 
 	<header id="head">
@@ -23,3 +24,4 @@
 		<button type="button" class="submitCustomActivity btn btn-primary"> Submit </button> 
 	</section> 
 </form>
+<div>
