--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -130,6 +130,7 @@ $dangerRed: #891515;
     background-color: white;
     box-shadow: .5px .5px .5px #888888;
     margin: 0 auto;
+    margin-bottom: 30px;
     text-align: center;
     padding-bottom: 20px;
     border-top-left-radius: 7px;
