--- a/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
@@ -1,7 +1,7 @@
 <!-- Temporary styling -->
 
 <div class="historyOuter">
-<div class="histContainer animated pulse">
+<div class="histContainer">
 	<header> 
 		<h3 id='historyTitle'> History for <%= name%> </h3> 
 	</header>
@@ -21,7 +21,7 @@
 	</section>
 </div>
 
-<div class="custHistContainer animated pulse">
+<div class="custHistContainer">
 	<header> 
 		<h3 id='customHistoryTitle'> Custom Activity History for <%= name%> </h3> 
 	</header>
