--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -32,6 +32,6 @@
 <div class='createCustomActivity'> </div>
 <br>
 
-<footer class='mainFooter'> 
+<footer id="footer"> 
   <h3>Tempo © 2016</h3>
 </footer>
