--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -8,7 +8,6 @@
 
   .jumbotron {
     padding: 0;
-    min-height: 500px;
     position: relative;
   }
 
@@ -17,33 +16,28 @@
     top: 45px;
     margin: 0 auto;
     width: 90%;
-    min-height: 500px;
-    max-height: 800px;
     background-color: white;
     border: 1px solid #ddd;
     box-shadow: 1px 1px 1px #eee;
     border-top-left-radius: 5px;
   	border-top-right-radius: 5px;
+    margin-bottom: 50px;
   }
 
   .activity header {
-    position: relative;
-    top: 0;
-    height: 12%;
+    text-align: center;
+    vertical-align: center;
     background-color: rgb(31, 137, 229);
     color: white;
   }
 
   .activity header h3 {
   	margin: 0;
-    padding: 7px;
-  	line-height: 23px;
+    padding: 15px;
   }
 
   /*TODO: Fix adjusting section container*/
   .activity section {
-  	height: 90%;
-    max-height: 375px;
   	overflow: hidden;
   	margin-bottom: 0;
     padding: 10px;
@@ -52,7 +46,6 @@
 
   .activity section p {
   	overflow: scroll;
-  	height: 100%;
     width: 100%;
   	font-family: 'Lato', sans-serif;
     font-weight: 300;
@@ -62,13 +55,11 @@
   }
 
   .activity section .thumbnail {
-    height: 90%;
     width: 100%;
-    max-height: 345px;
     overflow: scroll;
-    position: relative;
     border: none;
     font-size: 18px;
+    margin-bottom: 100px;
   }
 
   .activity section .content-video {
@@ -76,20 +67,20 @@
   }
 
   .activity section .likeContainer {
-  	margin: 10px;
-  	margin-bottom: 0;
+  	margin: 0 auto;
   }
 
-  .activity footer {
+  .activity .footer {
+    height: 100px;
+    position: absolute;
+    width: 100%;
   	background-color: #f5f5f5;
-  	position: absolute;
-  	height: 20%;
   	bottom: 0;
   	border: 1px solid #ddd;
+    margin-top: 30px;
   }
 
-  .activity footer a {
-  	position: relative;
+  .activity .footer a {
   	top: 10px;
   	text-decoration: none;
   	color: #2980B9;
@@ -103,7 +94,6 @@
 
   #like-count {
     color: rgb(92, 184, 92);
-    margin-right: 45px;
   }
 
   #dislike-count {
@@ -113,6 +103,7 @@
   .like-btn {
     background-color: rgb(92, 184, 92);
     border-color: rgb(92, 184, 92);  
+    margin-bottom: 10px;
   }
 
   .like-btn:hover, .like-btn:active, .like-btn:visited, .like-btn:focus {
@@ -123,6 +114,7 @@
   .dislike-btn {
     background-color: rgb(217, 83, 79);
     border-color: rgb(217, 83, 79);
+    margin-bottom: 10px;
   }
 
     .dislike-btn:hover, .dislike-btn:active, .dislike-btn:visited, .dislike-btn:focus {
@@ -130,13 +122,22 @@
     outline: none;
   }
 
-  .likeContainer {
+  .buttonContainer {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 10px;
 
   }
 
-  .likeContainer button:hover {
+  .buttonContainer button:hover {
   	opacity: .8;
   	cursor: pointer;
+  }
+
+  .likeContainer {
+    width: 25%;
+    margin: 0 auto;
+    text-align: center; 
   }
 
 
@@ -154,15 +155,33 @@
   #share {
     float: right;
     cursor: pointer;
+    margin-right: 10px;
+    font-size: 25px;
+    margin-top: 25px;
+
   }
 
   #back {
+    font-size: 25px;
+    margin-left: 10px;
     float: left;
+    margin-top: 25px;
   }
 
+  #likes {
+    margin-right: 25px;
+    font-size: 14px;
+  }
+
+  #dislikes {
+    font-size: 14px;
+    margin-left: 28px;
+  }
+
+
   #link {
-    position: relative;
-    top: 40px;
+    margin-top: 10px;
+    font-size: 18px;
   }
 </style>
 
@@ -175,23 +194,24 @@
   <section>
     <div class="thumbnail">
       <!-- <img src="..." alt="..."> -->
-      <div class="caption">
+      <p>
         <div id="content"><%= content %></div>
-      </div>
+      </p>
     </div>
   </section>
 
-  <footer>
+  <footer class="footer">
+      <div class="buttonContainer">
+      <a id="back" href='<%= backLink %>' id='back'> Back </a>   
+      <a id="share"> Share </a>
+      <div class="likeContainer">
       <span id="likes"><span id="like-count"><%= likes %></span></span>
       <span id="dislikes"><span id="dislike-count"><%= dislikes %></span></span>
       <br>
       <button class='btn btn-primary like-btn' role="button">Like</button>
-      <button class='btn btn-primary dislike-btn' role="button">Dislike</button><br>  
-      <div class="linkContainer">
-        <a id="back" href='<%= backLink %>' id='back'> Back </a>   
-        <a id="share"> Share </a>
-  
-      </div>
+      <button class='btn btn-primary dislike-btn' role="button">Dislike</button><br> 
       <div class="content-link"><a id="link" href='<%= link %>' target="_blank"> Link </a></div>
+      </div> 
+      </div>
   </footer>
 </div>
