--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -95,6 +95,7 @@ $dangerRed: #891515;
 
       /*Red button color scheme*/
       #add {
+          text-align: center;
           position: relative;
           width: 200px;
           height: 30px;
