--- a/app/assets/javascripts/backbone/templates/activities/activityCustom.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activityCustom.jst.ejs
@@ -14,7 +14,7 @@
 
   .activity {
     position: relative;
-    top: 45px;
+    top: 75px;
     margin: 0 auto;
     width: 90%;
     min-height: 500px;
@@ -80,9 +80,11 @@
     margin-bottom: 0;
   }
 
-  .activity footer {
+  .activity .footer {
+    margin: 0 auto;
     background-color: #f5f5f5;
     position: absolute;
+    width: 100%;
     height: 10%;
     bottom: 0;
     border: 1px solid #ddd;
@@ -146,7 +148,14 @@
   }
 
   #back {
+    font-size: 25px;
     margin: 0 auto;
+  }
+
+  .back-wrapper {
+    width: 25%;
+    margin: 0 auto;
+    text-align: center;
   }
 
   #link {
@@ -169,7 +178,9 @@
     </div>
   </section>
 
-  <footer>
-    <a id="back" href='<%= backLink %>' id='back'> Back </a>   
+  <footer class="footer">
+    <div class="back-wrapper">
+      <a id="back" href='<%= backLink %>' id='back'> Back </a> 
+    </div>  
   </footer>
 </div>
