--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /*Custom Activity Module*/
 
-$redHot: #b51c1c;
-$redLite: #ebccd1;
+$redHot: #3D7733;
+$redLite: #3D7733;
 $dangerRed: #891515;
 
   .custActContainer {
@@ -34,7 +34,7 @@ $dangerRed: #891515;
         margin-top: 5px;
         text-align: center;
         font-weight: bold;
-        color: #c7254e;
+        color: #6ABC5F;
       }
     }
 
@@ -103,10 +103,10 @@ $dangerRed: #891515;
           margin: 0 auto;
           margin-top: 9px;
           box-shadow: .5px .5px .5px #888888;   
-          border: 1px solid $dangerRed;
+          border: 1px solid #6ABC5F;
           border-radius: 5px; 
           font-size: 16px;  
-          background-color: $dangerRed;
+          background-color: $redHot;
           color: white;
       }
 
