--- a/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
@@ -11,8 +11,8 @@
 				<tbody>
 					<% _.each(data, function(custAct) { %> 
 						<tr class='history <%= custAct.id %>'>
-							<td> <a href='/tempo#activities/<%= custAct.id%>?history=true'> <%= custAct.title%> </a>
-								<button class="btn share-button" id="activity-<%= custAct.id%>"> share </button> </td>
+							<td> <a href='/tempo#activities/<%= custAct.id%>?history=true'> <%= custAct.title%> </a> </td>
+							<td>	<button class="btn share-button" id="activity-<%= custAct.id%>"> share </button> </td>
 						</tr>
 						<% }); %>			
 				</tbody>
