added text area to custom activity create form

--- a/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
@@ -10,9 +10,9 @@
 	</header>
 	<section> 
 		<label for="title"> Title: </label> <br> 
-		<input type="text" name"title" id="title" value=""> <br> 
-		<label for="content"> Content: </label> <br> 
-		<input type="text" name"content" id="content" value=""> <br> 
+		<input type="textarea" name"title" id="title" value=""> <br> 
+		<label for="content"> Content: </label> <br> <b>
+		<textarea type="text" name"content" id="content" value=""> </textarea> <br> 
 		<label for="completion_time"> Completion time: </label> <br> 
 		<section> 
 			<input class="knob" data-width="100" data-displayinput="true" value="0" height="100" >
