Fix paragraph element in home view

--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -19,7 +19,7 @@
 		<% _.each(interests, function(interest, i) { %> 
 			<li>
 				<input type=checkbox name= "<%= interest%>"  id="interest-<%= i%>" checked >
-				<P> <%= interest %> </p>
+				<p> <%= interest %> </p>
 			</li>
 		<% }); %>
 		</ul>
