--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -143,159 +143,49 @@ $greenText: rgb(104, 187, 108);
 
 
   }
-}
 
-/*
-    section {
-      position: relative;
-      width: 100%;
-      height: 312px;
-      overflow: scroll;
-
-      .tableContainer {
-        position: relative;
-        width: 90%;
-        height: 90%;
-        margin: 0 auto;
-        margin-top: 15px;
-        overflow: scroll;
-
-        #custActTable {
-          position: relative;
-          border-radius: 3px;
-          margin: 0 auto;
-          width: 100%;
-          top: 7%;
-
-          thead tr th {
-            font-size: 19px;
-            font-weight: bold;
-          }
-
-          tbody tr td {
-            font-family: 'Open Sans Condensed', sans-serif;
-            font-size: 16px;
-          }
-
-          .del-btn {
-            color: white;
-            background-color: #e74c3c;
-            border: 1px solid #e74c3c;
-            border-radius: 55px;
-          }
-
-          .del-btn:hover {
-            cursor: pointer;
-            opacity: .8;
-          }        
-        }
-      }
-    }
-
-    footer {
-      background-color: #f5f5f5;
-      border-bottom: 3px solid $redHot;
-      border-bottom-right-radius: 2px;
-      border-bottom-left-radius: 2px;
-      border-top: 1px solid $redLite;
-      height: 13%;
-*/
-      /*Red button color scheme*/
-/*      #add {
-          position: relative;
-          width: 150px;
-          height: 30px;
-          display: block;
-          margin: 0 auto;
-          margin-top: 9px;
-          box-shadow: .5px .5px .5px #888888;   
-          border: 1px solid $dangerRed;
-          border-radius: 5px; 
-          font-size: 16px;  
-          background-color: $dangerRed;
-          color: white;
-      }
-
-      #add:hover {
-          opacity: .8;  
-          cursor: pointer;
-          text-decoration: none;
-      }   
-    }
-  }*/
-
-
-
-
-  /*Activity List styling ~~~~~~~~~~~~~~~*/
-/*  #activityTitle {
-    margin: 0 auto;
-    margin-top: 50px;
+  .interest-type {
+    display: inline-block;
     text-align: center;
-    background-color: #D5DDE6;
-    width: 675px;
-    height: 45px;
-    border-radius: 2px;
-    position: relative;
-    border: 1px solid #eee;
-  }
-
-  #activityTitle h4 {
-    margin: 0;
-    position: relative;
-    top: 12px;
-    color: #9b59b6;
-  }
-
-  .activityTable {
-    border: 1px solid #eee;
-    width: 675px;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    background: rgb(250, 250, 250);
-    box-shadow: 1px 1px 1px #999;
-    border-radius: 2px;
-    text-align: center;
-  }
-
-  .activityTable thead {
-    background-color: #2980B9;
-    color: white;
-    width: 100%;
-    padding: 0;
-  }
-
-  .activityTable th {
-    height: 30px;
-    padding: 3px;
-  }
-
-  .activityTable td {
-    height: 30px;
-    border-top: 1px solid #eee;
-  }
-
-  .activityTable a {
-    text-decoration: none;
-  }
-
-  .activityTable a:hover {
-    text-decoration: underline;
+    border-radius: 5px;
+    background-color: $greenText;
+    width: 95px;
+    padding: 2px;
+    margin-top: 3px;
+    margin-right: 10px;
     color: black;
-    opacity: .6;
-    font-size: 100%;
-    background-color: rgb(250, 250, 250);
-  }  
-
-  .activityTable #contentType {
-    color: #e67e22;
   }
 
-  .activityTable #likeCount {
-    color: #16a085;
+  .icon {
+    color: $greenText;
+    display: inline-block;
+    text-align: center;
+    width: 35px;
+    padding: 2px;
+    height: 25px;
+    font-size: 20px;
+  }
+  .rating-text {
+    display: inline;
+    float: right;
+    line-height: 50px;
+    font-size: 20px;
+    margin-right: 5px;
   }
 
-  .activityTable #dislikeCount {
-    color: #c0392b;
-  }  
-*/
+  .rating {
+    display: inline;
+    margin-left: 5px;
+    float: left;
+  }
+
+  td {
+    border-left: 1px solid transparent !important;
+    border-right: 1px solid transparent !important;
+  }
+  td.rating-cell {
+    width: 70px;
+    line-height: 50px;
+  }
+
+}
