adding message if no interests are selected

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -342,6 +342,10 @@ a, a:hover, a:active, a:visited {
 	outline: none;
 }
 
+#settings-link:hover {
+	font-size: 36px;
+}
+
 /*THE MAIN WRAPPER*/
 
 .testDiv {
