--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -77,7 +77,19 @@ $dangerRed: #891515;
             border-radius: 55px;
           }
 
+          .edit-btn {
+            color: white;
+            background-color: $redHot;
+            border: 1px solid $redHot;
+            border-radius: 55px;
+          }
+
           .del-btn:hover {
+            cursor: pointer;
+            opacity: .8;
+          }  
+
+          .edit-btn:hover {
             cursor: pointer;
             opacity: .8;
           }        
@@ -185,6 +197,18 @@ $dangerRed: #891515;
 
   .submitCustomActivity {
     width: 100%;
+  /*  background-image: linear-gradient(rgb(31, 137, 229) 0%, rgb(31, 137, 229) 100%);*/
+    border-radius: 25px;
+    margin-top: 20px;
+    position: relative;
+    bottom: 0;
+  }
+
+    .editActivityButton, .back-button {
+    width: 45%;
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
   /*  background-image: linear-gradient(rgb(31, 137, 229) 0%, rgb(31, 137, 229) 100%);*/
     border-radius: 25px;
     margin-top: 20px;
