Fix margin height on edit Custom Activity page

--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -135,7 +135,7 @@ $dangerRed: #891515;
   /*Create custom custom_activities form */
     #custom-activities-form {
     position: relative;
-    top: 75px;   
+    /* top: 75px; */
     width: 350px;
     height: 625px;
     border: 1px solid #dedede;
