fixed the buggy like/dislike stuff

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -202,7 +202,7 @@
 
   <footer class="footer">
       <div class="buttonContainer">
-      <a id="back" href='<%= backLink %>' id='back'> Back </a>   
+      <a id="back" href='<%= backLink %>'> Back </a>   
       <a id="share"> Share </a>
       <div class="likeContainer">
       <span id="likes"><span id="like-count"><%= likes %></span></span>
